added apply button to header, slightly reorganized apply page and forms page

--- a/files/apply.html
+++ b/files/apply.html
@@ -29,10 +29,21 @@
         month’s tuition is due. This will be applied to tuition for the
         following May.
       </p>
+      <h3>Application for Admission Form</h3>
       <p>
-        You may fill out an Application for Admission online. You may also
-        print out and return the pdf version:
+        You must fill this form out to apply for admission. This form only
+        needs to be filled out once.
+        <br>
+        <a href="files/application.html">Application for Admission</a>
+        <br>
+        <br>
+        You may also print out and return the pdf version:
         <a class="download" href="downloads/application.pdf" target="_blank">Application for Admission WUNS</a>
+        <br>
+        <br>
+        After admission, proceed with the enrollment forms:
+        <br>
+        <a class="download" href="files/forms.html">Enroll</a>
       </p>
     </main>
   </div>
