--- a/scripts/ts/dynamic-dom/html/header.html
+++ b/scripts/ts/dynamic-dom/html/header.html
@@ -60,6 +60,7 @@
 <header role="banner">
   <div class="container">
     <a class="site-title" href="files/index.html">Nursery School</a>
+    <a class="site-title" id="apply" href="files/apply.html">Apply</a>
   </div>
   <div id="main-menu-container">
     <div class="container">
