--- a/files/forms.html
+++ b/files/forms.html
@@ -14,63 +14,30 @@
   <ts-load data-name="header"></ts-load>
   <div id="page-content">
     <main>
-      <h1>Forms</h1>
-      <h3>ENROLLMENT AND DEVELOPMENTAL HISTORY FORMS</h3>
+      <h2>Enrollment Forms</h2>
+      <h4>Fill out these forms once your child has been accepted for admission.</h4>
       <br>
-      <h4>Please fill out the online versions of the appropriate forms.</h4>
-      <ul>
-        <li>
-          The Enrollment Form needs to be filled out every year that your
-          child attends WUNS.
-        </li>
-        <li>
-          If you are new to the school, fill out the Application Form (this
-          form only needs to be filled out once).
-        </li>
-        <li>
-          Once accepted into the school, fill out the Developmental History
-          Form (only needs to be done once).
-        </li>
-        <li>
-          The two medical forms (below) are only available as PDFs and must
-          also be filled out and returned.
-        </li>
-      </ul>
-      <br>
-      <h3>Enrollment Form</h3>
+      <h3>1. Enrollment Form</h3>
       <p>
-        You must fill this form out every year that your child attends WUNS.
-        <br>
-        <br>
-        <a href="files/enroll.html">Fill out form</a>
+        Must be filled out every year
+        <ul>
+          <li><a class="link" href="files/enroll.html">Fill out form</a></li>
+        </ul>
       </p>
-      <h3>Developmental History Form</h3>
+      <h3>2. Medical Forms</h3>
       <p>
-        You must fill this form out after admission into WUNS. This form only
-        needs to be filled out once.
-        <br>
-        <br>
-        <a href="files/developmental">Fill out form</a>
+        Must be filled out every year
+        <ul>
+          <li><a class="download" href="downloads/examination_report.pdf" target="_blank">Child Medical Examination Report (PDF)</a></li>
+          <li><a class="download" href="downloads/immunization_history.pdf" target="_blank">Immunization Consent/History (PDF)</a></li>
+        </ul>
       </p>
-      <h3>Application for Admission Form</h3>
+      <h3>3. Developmental History Form</h3>
       <p>
-        You must fill this form out to apply for admission. This form only
-        needs to be filled out once.
-        <br>
-        <br>
-        <a href="files/application.html">Fill out form</a>
-      </p>
-      <h3>
-        The following forms are only available as PDFs and also must be filled
-        out:
-      </h3>
-      <br>
-      <p>
-        <a class="download" href="downloads/examination_report.pdf" target="_blank">Child Medical Examination
-          Report</a>
-        <br>
-        <br>
-        <a class="download" href="downloads/immunization_history.pdf" target="_blank">Immunization Consent/History</a>
+        Only needs to be filled out once.
+        <ul>
+          <li><a class="link" href="files/developmental">Fill out form</a></li>
+        </ul>
       </p>
     </main>
   </div>
