--- a/files/forms.html
+++ b/files/forms.html
@@ -14,30 +14,28 @@
   <ts-load data-name="header"></ts-load>
   <div id="page-content">
     <main>
-      <h2>Enrollment Forms</h2>
+      <h1>Enrollment Forms</h1>
       <h4>Fill out these forms once your child has been accepted for admission.</h4>
       <br>
-      <h3>1. Enrollment Form</h3>
+      <h3>Enrollment Form</h3>
       <p>
         Must be filled out every year
-        <ul>
-          <li><a class="link" href="files/enroll.html">Fill out form</a></li>
-        </ul>
+        <br>
+        - <a class="link" href="files/enroll.html">Fill out form</a>
       </p>
-      <h3>2. Medical Forms</h3>
+      <h3>Medical Forms</h3>
       <p>
         Must be filled out every year
-        <ul>
-          <li><a class="download" href="downloads/examination_report.pdf" target="_blank">Child Medical Examination Report (PDF)</a></li>
-          <li><a class="download" href="downloads/immunization_history.pdf" target="_blank">Immunization Consent/History (PDF)</a></li>
-        </ul>
+        <br>
+         - <a class="download" href="downloads/examination_report.pdf" target="_blank">Child Medical Examination Report (PDF)</a>
+        <br>
+         - <a class="download" href="downloads/immunization_history.pdf" target="_blank">Immunization Consent/History (PDF)</a>
       </p>
-      <h3>3. Developmental History Form</h3>
+      <h3>Developmental History Form</h3>
       <p>
         Only needs to be filled out once.
-        <ul>
-          <li><a class="link" href="files/developmental">Fill out form</a></li>
-        </ul>
+        <br>
+         - <a class="link" href="files/developmental">Fill out form</a>
       </p>
     </main>
   </div>
