change classroom overview

--- a/files/classrooms_backup.html
+++ b/files/classrooms_backup.html
@@ -25,82 +25,90 @@
         nurturing environment that encourages growth and independence in all
         developmental areas.
       </h2>
-      <div class="curriculum-link-container">
-        <a href="files/curriculum_overview.html" class="curriculum-overview-link">Curriculum Overview →</a>
-      </div>
       <p>
-
+        <img id="naeyc-logo" src="https://nurseryschool.wustl.edu/file/2014/04/accredited-naeyc.jpg"
+          alt="accredited-naeyc" width="200" height="128">
+        The philosophy of the nursery school is that children learn most
+        effectively through play. Our approach is "hands-on," where children
+        act upon what they are learning and feeling. We consider the process
+        more important than the product. Teachers provide the opportunity for
+        children to interact with their environment in ways that are
+        meaningful to them. For each class, teachers develop a curriculum that
+        reflects the interests and abilities of the children in the classroom.
+        In addition, all children actively participate with specialists in
+        science, art, music and Spanish. As trends in the field of early
+        education change, we evaluate what is new and determine if it would be
+        enriching for our program.
+      </p>
+      <p>
+        The staff at the nursery school respects and appreciates the talents
+        and personalities of each child and his or her family. A teacher's
+        individual talents are also encouraged as she or he develops his or
+        her own personal approach in the classroom. This makes for a vibrant,
+        growing community of children, families and teachers.
+      </p>
+      <a class="download" href="downloads/singalong.mov" target="_blank"></a>
 
       <div class="classroom-grid">
-        <div class="classroom-panel">
+        <a href="files/teddy_bears.html" class="classroom-panel">
           <img src="https://nurseryschool.wustl.edu/files/2016/08/teddy-bear-letters-350x446.jpg" alt="Teddy Bears classroom">
           <div class="panel-content">
             <h3>Teddy Bears</h3>
             <div class="age-group">Ages 2½ – 3</div>
             <div class="key-feature">Morning Session</div>
-            <a href="files/teddy_bears.html" class="learn-more">Classroom Page →</a>
+            <div class="learn-more">Learn More →</div>
           </div>
-        </div>
+        </a>
 
-        <div class="classroom-panel">
+        <a href="files/panda_bears.html" class="classroom-panel">
           <img src="https://nurseryschool.wustl.edu/files/2016/08/teddy-bear-letters-350x446.jpg" alt="Panda Bears classroom">
           <div class="panel-content">
             <h3>Panda Bears</h3>
             <div class="age-group">Ages 2½ – 3</div>
             <div class="key-feature">Afternoon Session</div>
-            <a href="files/panda_bears.html" class="learn-more">Classroom Page →</a>
+            <div class="learn-more">Learn More →</div>
           </div>
-        </div>
+        </a>
 
-        <div class="classroom-panel">
+        <a href="files/bear_cubs.html" class="classroom-panel">
           <img src="https://nurseryschool.wustl.edu/files/2014/06/building-350x525.jpg" alt="Bear Cubs classroom">
           <div class="panel-content">
             <h3>Bear Cubs</h3>
             <div class="age-group">Ages 3 – 4</div>
             <div class="key-feature">Morning Session</div>
-            <a href="files/bear_cubs.html" class="learn-more">Classroom Page →</a>
+            <div class="learn-more">Learn More →</div>
           </div>
-        </div>
+        </a>
 
-        <div class="classroom-panel">
+        <a href="files/big_bears.html" class="classroom-panel">
           <img src="https://nurseryschool.wustl.edu/files/2016/08/writing-sun-bear-350x443.jpg" alt="Big Bears classroom">
           <div class="panel-content">
             <h3>Big Bears</h3>
             <div class="age-group">Ages 4 – 5</div>
             <div class="key-feature">Morning Session</div>
-            <a href="files/big_bears.html" class="learn-more">Classroom Page →</a>
+            <div class="learn-more">Learn More →</div>
           </div>
-        </div>
+        </a>
 
-        <div class="classroom-panel">
+        <a href="files/sun_bears.html" class="classroom-panel">
           <img src="https://nurseryschool.wustl.edu/files/2016/08/writing-sun-bear-350x443.jpg" alt="Sun Bears classroom">
           <div class="panel-content">
             <h3>Sun Bears</h3>
             <div class="age-group">Ages 4 – 5</div>
             <div class="key-feature">Afternoon Session</div>
-            <a href="files/sun_bears.html" class="learn-more">Classroom Page →</a>
+            <div class="learn-more">Learn More →</div>
           </div>
-        </div>
+        </a>
 
-        <div class="classroom-panel">
+        <a href="files/bear_tracks.html" class="classroom-panel">
           <img src="https://nurseryschool.wustl.edu/files/2016/08/bear-tracks-hammock-350x306.jpg" alt="Bear Tracks extended day">
           <div class="panel-content">
             <h3>Bear Tracks</h3>
             <div class="age-group">All Ages</div>
             <div class="key-feature">Extended Session for Half Day Students</div>
-            <a href="files/bear_tracks.html" class="learn-more">Classroom Page →</a>
+            <div class="learn-more">Learn More →</div>
           </div>
-        </div>
-
-        <div class="classroom-panel enrichment-panel">
-          <img src="https://nurseryschool.wustl.edu/files/2017/09/Fun-on-the-Bench.jpg" alt="Enrichment Programs">
-          <div class="panel-content">
-            <h3>Enrichment Programs</h3>
-            <div class="age-group">All Ages</div>
-            <div class="key-feature">Special classes in science, art, music and Spanish for all students</div>
-            <a href="files/enrichment_programs.html" class="learn-more">Program Details →</a>
-          </div>
-        </div>
+        </a>
       </div>
     </main>
     <div class="widget-area stick secondary" role="complementary">
@@ -108,10 +116,6 @@
         <li class="page_item page-item-95 page_item_has_children current_page_item">
           <a href="files/classrooms.html" aria-current="page">Classrooms</a>
           <ul class="children">
-            <li><hr></li>
-            <li class="page_item page-item-overview">
-              <a href="files/classrooms.html">Classrooms Overview</a>
-            </li>
             <li><hr></li>
             <li class="page_item page-item-10528">
               <a href="files/curriculum_overview.html">Curriculum Overview</a>
@@ -138,7 +142,7 @@
             </li>
             <li><hr></li>
             <li class="page_item page-item-10512">
-              <a href="files/bear_tracks.html">Bear Tracks</a>
+              <a href="files/bear_cubs.html">Bear Tracks</a>
             </li>
             <li><hr></li>
             <li class="page_item page-item-10514">
