--- a/scripts/ts/dynamic-dom/html/header.html
+++ b/scripts/ts/dynamic-dom/html/header.html
@@ -64,59 +64,47 @@
   </div>
   <div id="main-menu-container">
     <div class="container">
-      <div class="navbar">
-        <div class="dropdown">
-          <button class="dropbtn">
-            <a id="about" href="files/about.html">About </a>
-          </button>
-          <div class="dropdown-content">
-            <a id="tuition" href="files/tuition.html">Tuition</a>
-            <a id="parent-handbook" href="files/parent_handbook.html"
-              >Parent Handbook</a
-            >
-            <a id="curriculum-overview" href="files/curriculum_overview.html"
-              >Curriculum Overview</a
-            >
-          </div>
+        <div class="navbar">
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a id="about" href="files/about.html">About </a>
+                </button>
+                <div class="dropdown-content">
+                    <a id="curriculum-overview" href="files/curriculum_overview.html">Curriculum Overview</a>
+                    <a id="parent-handbook" href="files/parent_handbook.html">Parent Handbook</a>
+                    <a id="tuition" href="files/tuition.html">Tuition</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a id="classrooms" href="files/classrooms.html">Classrooms </a>
+                </button>
+                <div class="dropdown-content">
+                    <a id="teddy-bears" href="files/teddy_bears.html">Teddy Bears</a>
+                    <a id="panda-bears" href="files/panda_bears.html">Panda Bears</a>
+                    <a id="bear-cubs" href="files/bear_cubs.html">Bear Cubs</a>
+                    <a id="big-bears" href="files/big_bears.html">Big Bears</a>
+                    <a id="sun-bears" href="files/sun_bears.html">Sun Bears</a>
+                    <a id="bear-tracks" href="files/bear_tracks.html">Bear Tracks</a>
+                    <a id="enrichment-program" href="files/enrichment_programs.html">Enrichment Program</a>
+                </div>
+            </div>
+            <a id="staff" href="files/staff.html">Staff</a>
+            <a id="calendar" href="files/calendar.html">Calendar</a>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a id="get-involved" href="files/get_involved.html">Get Involved</a>
+                </button>
+                <div class="dropdown-content">
+                    <a id="nursery-school-merchandise"
+                       href="files/nursery_school_merchandise.html">Nursery School Merchandise</a>
+                    <a id="parent-association" href="files/parent_association.html">Parent Association</a>
+                </div>
+            </div>
+            <a id="parent-resources" href="files/parent_resources.html">Parent Resources</a>
+
+            <a id="summer-camp" href="files/summer_camp.html">Summer Camp</a>
         </div>
-        <a id="staff" href="files/staff.html">Staff</a>
-        <div class="dropdown">
-          <button class="dropbtn">
-            <a id="classrooms" href="files/classrooms.html">Classrooms </a>
-          </button>
-          <div class="dropdown-content">
-            <a id="teddy-bears" href="files/teddy_bears.html">Teddy Bears</a>
-            <a id="panda-bears" href="files/panda_bears.html">Panda Bears</a>
-            <a id="bear-cubs" href="files/bear_cubs.html">Bear Cubs</a>
-            <a id="big-bears" href="files/big_bears.html">Big Bears</a>
-            <a id="sun-bears" href="files/sun_bears.html">Sun Bears</a>
-            <a id="bear-tracks" href="files/bear_tracks.html">Bear Tracks</a>
-            <a id="enrichment-program" href="files/enrichment_programs.html"
-              >Enrichment Program</a
-            >
-          </div>
-        </div>
-        <a id="calendar" href="files/calendar.html">Calendar</a>
-        <a id="summer-camp" href="files/summer_camp.html">Summer Camp</a>
-        <div class="dropdown">
-          <button class="dropbtn">
-            <a id="get-involved" href="files/get_involved.html">Get Involved</a>
-          </button>
-          <div class="dropdown-content">
-            <a
-              id="nursery-school-merchandise"
-              href="files/nursery_school_merchandise.html"
-              >Nursery School Merchandise</a
-            >
-            <a id="parent-association" href="files/parent_association.html"
-              >Parent Association</a
-            >
-          </div>
-        </div>
-        <a id="parent-resources" href="files/parent_resources.html"
-          >Parent Resources</a
-        >
-      </div>
     </div>
   </div>
 </header>
