finish teddy bears

--- a/files/teddy_bears.html
+++ b/files/teddy_bears.html
@@ -211,7 +211,7 @@
 
           <div class="panel goals-panel">
             <h3>Classroom Goals</h3>
-            <div id="classroom-goals">
+            <div class="classroom-goals">
               <p>
                 The nursery school ensures that our school environment is safe,
                 healthy and conducive to children's exploration and
@@ -239,6 +239,9 @@
             </div>
           </div>
         </div>
+
+        <hr />
+        <br />
 
         <h3>Teachers</h3>
         <div class="individual-staff-member">
