--- a/files/parent_association.html
+++ b/files/parent_association.html
@@ -49,19 +49,13 @@
           <li
             class="page_item page-item-10509 page_item_has_children current_page_item"
           >
-            <a href="files/get_involved.html" aria-current="page"
-              >Get Involved</a
+            <a href="files/parent_resources.html" aria-current="page"
+              >Parent Resources</a
             >
             <ul class="children">
               <li><hr /></li>
-              <li class="page_item page-item-10511">
-                <a href="files/nursery_school_merchandise.html"
-                  >Nursery School Merchandise</a
-                >
-              </li>
-              <li><hr /></li>
               <li class="page_item page-item-45">
-                <a href="files/parent_association.html ">Parent Association</a>
+                <a href="files/parent_resources.html">Parent Resources</a>
               </li>
               <li><hr /></li>
             </ul>
