--- a/files/parent_handbook.html
+++ b/files/parent_handbook.html
@@ -36,17 +36,13 @@
       <div class="widget-area stick secondary" role="complementary">
         <ul class="subnav">
           <li
-            class="page_item page-item-27 page_item_has_children current_page_item"
+            class="page_item page-item-10509 page_item_has_children current_page_item"
           >
-            <a href="files/about.html" aria-current="page">About</a>
+            <a href="files/parent_resources.html" aria-current="page">Parent Resources</a>
             <ul class="children">
               <li><hr /></li>
-              <li class="page_item page-item-34">
-                <a href="files/tuition.html">Tuition</a>
-              </li>
-              <li><hr /></li>
-              <li class="page_item page-item-65">
-                <a href="files/staff.html">Staff</a>
+              <li class="page_item page-item-45">
+                <a href="files/parent_association.html">Parent Association</a>
               </li>
               <li><hr /></li>
               <li class="page_item page-item-10513">
