--- a/files/parent_resources.html
+++ b/files/parent_resources.html
@@ -117,10 +117,83 @@
         </p>
       </div>
 
+      <button class="accordion">Parent Association</button>
+      <div class="panel">
+        <br />
+        <h4>Parent Association Information:</h4>
+        <br />
+        <hr />
+        <br />
+        <p>
+          The parent organization for the Washington University Nursery School
+          allows parents to become better acquainted with other parents and
+          children, build a stronger sense of community and raise funds for
+          "extras."
+        </p>
+        <p>
+          Any parent of a student at the nursery school is automatically a
+          member. You can help by attending one of our meetings or contacting
+          the parent association school coordinator, Amber Ott, at (314)
+          935-6689. Our family events are listed on the school
+          <a href="files/calendar.html">calendar</a>.
+        </p>
+        <h3>Room Parents:</h3>
+        <p><strong> Big Bears/Sun Bears:</strong> Christina Ryan, Yi Sun</p>
+        <p>
+          <strong> Bear Cubs/Panda Bears: </strong> Tessa Schneider, Molly
+          Zemianek
+        </p>
+        <p>
+          <strong> Teddy Bears/Panda Bears: </strong> Mary Choquette, Dottie
+          Hemba
+        </p>
+      </div>
+
+      <button class="accordion">Parent Handbook</button>
+      <div class="panel">
+        <br />
+        <h4>Parent Handbook Information:</h4>
+        <br />
+        <hr />
+        <br />
+        <p>
+          The WUNS Parent Handbook provides families with important information
+          about WUNS' preschool philosophy, staff, curriculum, classrooms,
+          events, and policies and procedures.
+        </p>
+        <p class="not-external-redirect">
+          <a class="download" href="downloads/parent_handbook.pdf"
+            >PARENT HANDBOOK</a
+          >
+        </p>
+      </div>
+
       <br />
       <br />
       <br />
     </main>
+    <div class="widget-area stick secondary" role="complementary">
+      <ul class="subnav">
+        <li
+          class="page_item page-item-10509 page_item_has_children current_page_item"
+        >
+          <a href="files/parent_resources.html" aria-current="page"
+            >Parent Resources</a
+          >
+          <ul class="children">
+            <li><hr /></li>
+            <li class="page_item page-item-45">
+              <a href="files/parent_association.html">Parent Association</a>
+            </li>
+            <li><hr /></li>
+            <li class="page_item page-item-10513">
+              <a href="files/parent_handbook.html">Parent Handbook</a>
+            </li>
+            <li><hr /></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
     <ts-load data-name="footer"></ts-load>
     <script src="scripts/js/app.js"></script>
   </body>
