--- a/scripts/ts/dynamic-dom/html/header.html
+++ b/scripts/ts/dynamic-dom/html/header.html
@@ -71,7 +71,6 @@
                 </button>
                 <div class="dropdown-content">
                     <a id="curriculum-overview" href="files/curriculum_overview.html">Curriculum Overview</a>
-                    <a id="parent-handbook" href="files/parent_handbook.html">Parent Handbook</a>
                     <a id="tuition" href="files/tuition.html">Tuition</a>
                 </div>
             </div>
@@ -98,10 +97,17 @@
                 <div class="dropdown-content">
                     <a id="nursery-school-merchandise"
                        href="files/nursery_school_merchandise.html">Nursery School Merchandise</a>
-                    <a id="parent-association" href="files/parent_association.html">Parent Association</a>
                 </div>
             </div>
-            <a id="parent-resources" href="files/parent_resources.html">Parent Resources</a>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a id="parent-resources" href="files/parent_resources.html">Parent Resources</a>
+                </button>
+                <div class="dropdown-content">
+                    <a id="parent-association" href="files/parent_association.html">Parent Association</a>
+                    <a id="parent-handbook" href="files/parent_handbook.html">Parent Handbook</a>
+                </div>
+            </div>
 
             <a id="summer-camp" href="files/summer_camp.html">Summer Camp</a>
         </div>
