--- a/scripts/ts/dynamic-dom/html/header copy.html
+++ b/scripts/ts/dynamic-dom/html/header copy.html
@@ -71,9 +71,6 @@
           </button>
           <div class="dropdown-content">
             <a id="tuition" href="files/tuition.html">Tuition</a>
-            <a id="parent-handbook" href="files/parent_handbook.html"
-              >Parent Handbook</a
-            >
             <a id="curriculum-overview" href="files/curriculum_overview.html"
               >Curriculum Overview</a
             >
@@ -108,18 +105,25 @@
               href="files/nursery_school_merchandise.html"
               >Nursery School Merchandise</a
             >
-            <a id="parent-association" href="files/parent_association.html"
-              >Parent Association</a
-            >
           </div>
         </div>
 
         <a id="apply" href="files/apply.html">Apply</a>
         <a id="forms" href="files/forms.html">Forms</a>
 
-        <a id="parent-resources" href="files/parent_resources.html"
-          >Parent Resources</a
-        >
+        <div class="dropdown">
+          <button class="dropbtn">
+            <a id="parent-resources" href="files/parent_resources.html">Parent Resources</a>
+          </button>
+          <div class="dropdown-content">
+            <a id="parent-association" href="files/parent_association.html"
+              >Parent Association</a
+            >
+            <a id="parent-handbook" href="files/parent_handbook.html"
+              >Parent Handbook</a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </div>
